# verifiable-secret-sharing

./: Cargo.toml
src/: secp256k1_helper.rs  simple_sss.rs
