[package]
name = "verifiable_secret_sharing"
version = "0.1.1"
authors = ["hupeng <bitrocks.hu@gmail.com>"]
edition = "2018"
repository = "https://github.com/bitrocks/shamir-secret-sharing"
readme = "README.md"
description = "A rust implementation of  Shamir Secret Sharing over Finite Field."
license = "MIT"
documentation = "https://docs.rs/shamir_secret_sharing"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
rand = "0.8"
num-bigint-dig = "0.8"
num-bigint = {version = "0.4", features = ["rand"]}
num-traits = "0.2"
num-integer = {version = "0.1", features = ["std", "i128"]}
secp256k1 = { version = "0.30", features = ["rand"] }
